2007-09-04  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-private.h:
	* src/plparse/totem-pl-parser.c: (totem_pl_parser_class_init),
	(totem_pl_parser_playlist_end), (totem_pl_parser_init),
	(totem_pl_parser_add_url_valist):
	* src/plparse/totem-pl-parser.h: Change the API for the start and
	end of playlist, so we can pass additional data as part of the
	playlist start

	* configure.in: up the library version after yet another API breakage

	* src/plparse/totem-pl-parser-pla.c: (totem_pl_parser_add_pla):
	* src/plparse/totem-pl-parser-pls.c:
	(totem_pl_parser_add_pls_with_contents): Change to reflect new API

	* src/plparse/totem-pl-parser-wm.c: (parse_asx_entry),
	(parse_asx_entries), (totem_pl_parser_add_asx): Ditto, Don't pass the
	playlist title for entries, interested apps can use the
	playlist-started signal instead

	* src/plparse/test-parser.c: (playlist_started), (playlist_ended),
	(test_parsing), (main): Ditto, and add --g-fatal-warnings support

2007-09-03  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/mythtv/totem-mythtv.c: (list_recordings),
	(totem_mythtv_plugin_init): Also ignore empty descriptions, as
	opposed to a NULL string, update IP for my new install (I really
	new to write a config dialog)

2007-09-02  Bastien Nocera  <hadess@hadess.net>

	* src/totem-uri.c: (totem_add_files): Handle the old path not
	being accessible

2007-09-02  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/idl/totemICone.idl: Mark the attributes
	as readonly as they should be
	* browser-plugin/totemConePlugin.cpp: Patch from Christian Persch
	<chpe@gnome.org> to add stubs for the main totemConePlugin object
	(Helps: 462544)

2007-09-02  Christian Persch  <chpe@gnome.org>

	* src/Makefile.am: Fix non-srcdir builds. Bug #472955.

2007-09-01  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: Don't call out to the
	viewer when it's not started yet

2007-08-31  Bastien Nocera  <hadess@hadess.net>
