@@ -1,5 +1,16 @@
 2007-09-04  Bastien Nocera  <hadess@hadess.net>
 
+	* src/plparse/Makefile.am:
+	* src/plparse/totem-pl-parser-podcast.c: (totem_pl_parser_add_rss),
+	(totem_pl_parser_add_itpc), (totem_pl_parser_add_atom):
+	* src/plparse/totem-pl-parser-podcast.h:
+	* src/plparse/totem-pl-parser.c: (totem_pl_parser_init),
+	(totem_pl_parser_parse_internal):
+	* src/plparse/totem-pl-parser.h: Add stubs for RSS, Atom, and ITPC
+	podcasts
+
+2007-09-04  Bastien Nocera  <hadess@hadess.net>
+
 	* src/plparse/totem-pl-parser-private.h:
 	* src/plparse/totem-pl-parser.c: (totem_pl_parser_class_init),
 	(totem_pl_parser_playlist_end), (totem_pl_parser_init),
